# csc582-asg1

./: CMakeLists.txt  Doxyfile  README.md  readme.md  readme.txt
Tests/: ANDGateTest.cpp  FourBitAdderTest.cpp  FullAdderTest.cpp  HalfAdderTest.cpp  NANDGateTest.cpp  NOTGateTest.cpp  ORGateTest.cpp
docs/html/: index.html
include/: ANDGate.h  FourBitAdder.h  FullAdder.h  HalfAdder.h  NANDGate.h  NOTGate.h  ORGate.h
src/: ANDGate.cpp  FourBitAdder.cpp  FullAdder.cpp  HalfAdder.cpp  NANDGate.cpp  NOTGate.cpp  ORGate.cpp
